main/default/objects/Custom_Permissions__c/fields/Account_Transfer_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Access__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>None/Prospects/Subscribers</description>
    <inlineHelpText>None/Prospects/Subscribers</inlineHelpText>
    <label>Account Transfer Access</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>