main/default/objects/Custom_Permissions__c/fields/Can_Create_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Create Hierarchy</label>
    <type>Checkbox</type>
</CustomField>