main/default/objects/Custom_Permissions__c/fields/Can_Delete_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Can_Delete_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Delete Chatter</label>
    <type>Checkbox</type>
</CustomField>