main/default/objects/Custom_Permissions__c/fields/Can_Do_Billing_Options__c.field-meta.xml
<CustomField>
    <fullName>Can_Do_Billing_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Do Billing Options</label>
    <type>Checkbox</type>
</CustomField>