main/default/objects/Custom_Permissions__c/fields/Can_Integrate_Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Can_Integrate_Subscribers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Integrate Subscribers</label>
    <type>Checkbox</type>
</CustomField>