main/default/objects/Custom_Permissions__c/fields/Can_Manually_Create_Building__c.field-meta.xml
<CustomField>
    <fullName>Can_Manually_Create_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Manually Create Building</label>
    <type>Checkbox</type>
</CustomField>