main/default/objects/Custom_Permissions__c/fields/Can_Modify_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Can_Modify_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Modify Hierarchy</label>
    <type>Checkbox</type>
</CustomField>