main/default/objects/Custom_Permissions__c/fields/Can_Reactivate_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Can_Reactivate_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Reactivate Accounts</label>
    <type>Checkbox</type>
</CustomField>