main/default/objects/Custom_Permissions__c/fields/WsMgPage_Workstep_Issues_Visible__c.field-meta.xml
<CustomField>
    <fullName>WsMgPage_Workstep_Issues_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WsMgPage Workstep Issues Visible</label>
    <type>Checkbox</type>
</CustomField>