main/default/objects/Custom_Permissions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group_Type__c</columns>
    <columns>Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>